--- a/_toc.yml
+++ b/_toc.yml
@@ -3,8 +3,15 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
-- file: mymarkdownfile
+parts:
+  - caption: HTML
+    chapters:
+    - file: html/1_basic_html
+    - file: html/2_semantic_html
+    - file: html/3_forms_and_tables_html
+    - file: html/4_accessibility
+      # sections:
+      # - file: path/to/part1/chapter2/section1
+  - caption: CSS
+    chapters:
+    - file: css/1_basic_css
