--- a/_toc.yml
+++ b/_toc.yml
@@ -8,14 +8,15 @@ parts:
     chapters:
     - file: html/1_basic_html.html
       sections:
-      - file: html/1_basic_html/1
-      - file: html/1_basic_html/2
-      - file: html/1_basic_html/3
-      - file: html/1_basic_html/4
-    - file: html/2_semantic_html
-    - file: html/3_forms_and_tables_html
-    - file: html/4_accessibility
+      - file: html/1_basic_html/1.ipynb
+      - file: html/1_basic_html/2.ipynb
+      - file: html/1_basic_html/3.ipynb
+      - file: html/1_basic_html/4.ipynb
+      - file: html/1_basic_html/5.ipynb
+    - file: html/2_semantic_html.ipynb
+    - file: html/3_forms_and_tables_html.ipynb
+    - file: html/4_accessibility.ipynb
     
   - caption: CSS
     chapters:
-    - file: css/1_basic_css
+    - file: css/1_basic_css.ipynb
