--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: My Front End Notes
 author: Mikaela González Pérez
-logo: logo.png
+logo: logo.svg
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -14,10 +14,6 @@ execute:
 latex:
   latex_documents:
     targetname: front_end_course.tex
-
-# Add a bibtex file so that we can create citations
-bibtex_bibfiles:
-  - references.bib
 
 # Information about where the book exists on the web
 repository:
