--- a/_toc.yml
+++ b/_toc.yml
@@ -62,3 +62,7 @@ parts:
         - file: javaScript/2_booleans_n_numbers/2
         - file: javaScript/2_booleans_n_numbers/3
         - file: javaScript/2_booleans_n_numbers/4
+    - file: javaScript/3_functions
+      sections: 
+        - file: javaScript/3_functions/1
+        - file: javaScript/3_functions/2
